# UpperLower

./: README.md  pyproject.toml
upperlower/: lower.py  upper.py
upperlower/lib/: clipboard.py
